--- a/style.css
+++ b/style.css
@@ -1,1 +1,54 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
+
+main{
+    margin: 50px;
+}
+
+body {
+    font-family: 'Roboto slab';
+    background-color: #eee;
+    margin: 50px;
+    box-shadow: 10px 19px 3px rgb(50, 49, 49);
+    border: 2px solid black;
+}
+#Article{
+    font-size: 70px;
+}
+.date {
+    text-align: left;
+    padding: 1%;
+}
+
+header{
+    font-family: 'Abril Fatface', cursive;
+    background-color: silver;
+    text-align: center;
+    padding-bottom: 2%;
+    border-bottom: solid black 2px;
+}
+
+h2{
+    color:#242020bd;
+}
+li {
+    display: inline-block;
+    padding-left: 3%;
+}
+
+a:visited {
+    color: #777;
+    text-decoration: none;
+}
+a:link {
+    color: #777;
+    text-decoration: none;
+}
+section{
+    border: 6px;
+    margin: 50px;
+}
+#Bottom-section {
+    border: 6px;
+    margin: 50px;
+    padding-bottom: 2%;
+}
