--- a/style.css
+++ b/style.css
@@ -7,10 +7,9 @@ main{
 body {
     font-family: 'Roboto slab';
     background-color: #eee;
-    margin: 50px;
-    box-shadow: 10px 19px 3px rgb(50, 49, 49);
   
 }
+
 #Article{
     font-size: 70px;
 }
@@ -30,6 +29,13 @@ header{
 h2{
     color:#242020bd;
 }
+
+ul{
+    padding: 5px 7px;
+    border-top: 2px solid lightgray;
+    border-bottom: 2px solid lightgray;
+}
+
 li {
     display: inline-block;
     padding-left: 3%;
@@ -54,5 +60,8 @@ section{
 }
 
 .newspaper-container {
-    border-radius: 50%;
+    background-color: white;
+    width: 700px;
+    box-shadow: 2px 2px rgba(153, 14, 14, 0.197);
+    margin: auto;
 }
